# doosan_coop

./: .gitignore  scaler_info_RISE_250821.txt  scaler_info_RISE_250828.txt
model_GRver2_tf/: saved_model.pb
model_GRver2_tf/variables/: variables.data-00000-of-00001  variables.index
model_RISE_250821_tf/: saved_model.pb
model_RISE_250821_tf/variables/: variables.data-00000-of-00001  variables.index
model_RISE_250828_tf/: saved_model.pb
model_RISE_250828_tf/variables/: variables.data-00000-of-00001  variables.index
model_SKKU_250721_tf/: keras_metadata.pb  saved_model.pb
model_SKKU_250721_tf/variables/: variables.data-00000-of-00001  variables.index
skku_control/: .gitignore  CMakeCache.txt  CMakeLists.txt  mlp_model_v2.h5  package.xml
skku_control/config/: skku_control.yaml
skku_control/include/skku_control/: dsr_hw_interface.h
skku_control/launch/: dsr_control.launch  dsr_fake_control.launch  skku_control.launch
skku_control/skku_tools/: CMakeLists.txt  package.xml
skku_control/skku_tools/config/: control_gains_utf8.yaml
skku_control/skku_tools/include/skku_tools/: control_loop.h  control_state.h  control_tools.h  duration.h  impedance_controller.h
skku_control/skku_tools/src/: control_loop.cpp  control_state.cpp  control_tools.cpp  duration.cpp  impedance_controller.cpp
skku_control/src/: SKKU_control_node.cpp  can_communication_node.cpp  dsr_hw_interface.cpp  trajectory_publisher_node.cpp
