<?xml version="1.0"?>
<package format="2">
  <name>skku_control</name>
  <version>1.2.0</version>
  <description>skku impedance package</description>

  <author email="choyj1085@skku.edu">Yong Jin Jo</author>

  <maintainer email="choyj1085@skku.edu">RBL</maintainer>

  <license>BSD</license>
  <url type="website">http://wiki.ros.org/doosan_robotics</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>dsr_msgs</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>roscpp</build_depend>
  <!-- <build_depend>rosbag</build_depend> -->

  <build_export_depend>dsr_msgs</build_export_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>hardware_interface</build_export_depend>
  <build_export_depend>serial</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>

  <exec_depend>dsr_msgs</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>serial</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <!-- <exec_depend>rosbag</exec_depend> -->
  <export>
  </export>
</package>
